--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "three": "^0.153.0",
+    "vanta": "^0.5.24"
   }
 }
